--- a/src/common/css/common.scss
+++ b/src/common/css/common.scss
@@ -1,5 +1,18 @@
 
 
+  .pc_home_body {
+    height: 100% !important;
+    background-size: cover;
+    overflow-y: hidden;
+    background: url(../../page/Home/Home_pc/img/bg3.jpg);
+  }
+  html,
+  
+  body {
+    height: 100%;
+    overflow: hidden !important;
+  }
+
 
 body{
     position: relative;
@@ -18,11 +31,11 @@ img {
 html{
   background-color:  #f4f4f4;
 }
-.home-pc {
+.guide_pc {
     width: 1200px;
     margin: 0 auto;
 }
-.home-h5 {
+.guide_h5 {
     width: 100%;
     margin: 0 auto;
 }
