--- a/src/component/H5GuideMain2/index.scss
+++ b/src/component/H5GuideMain2/index.scss
@@ -29,7 +29,7 @@ div.zhushou-tour {
       margin-top: 0;
     }
   }
-  .home-pc-first-step {
+  .guide_pc-first-step {
     background-size: 100% 100%;
     width: 480px;
     padding: 20px;
