--- a/src/component/PCGuideMain/index.scss
+++ b/src/component/PCGuideMain/index.scss
@@ -1,12 +1,6 @@
 
 
 
-body{
-  position: relative;
-  width: 1200px !important;
-  margin: 0 auto;
-}
-
 // 用户引导相关的css放在这里
 
 
@@ -32,7 +26,7 @@ div.zhushou-tour {
       margin-top: 0;
     }
   }
-  .home-pc-first-step {
+  .guide_pc-first-step {
     background-size: 100% 100%;
     width: 480px;
     padding: 20px;
