--- a/src/common/css/index.scss
+++ b/src/common/css/index.scss
@@ -22,6 +22,10 @@ body {
   margin: 0 auto !important;
   overflow: auto;
 }
+
+.h5_page {
+  width: 100%;
+}
 // pc 引导
 .pc_guide_body {
   width: 1200px;
