--- a/src/component/H5GuideMain2/index.scss
+++ b/src/component/H5GuideMain2/index.scss
@@ -1,11 +1,38 @@
 
 
+
+
+#gaizhang{
+  position: fixed;
+  top: 50%;
+  right: 0;
+  z-index: 2;
+  width: 200px;
+  height: 80px;
+  border-radius: 40px 0 0 40px;
+  background-color: rgb(146, 145, 221);
+  color: #fff;
+  .gaizhang_img {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 80px;
+  }
+  .all_number{
+    position: absolute;
+    left: 100px;
+    top: 10px;
+  }
+  .last_number{
+    position: absolute;
+    left: 100px;
+    top: 30px;
+  }
+}
 // 用户引导相关的css放在这里
 
-body{
-  position: relative;
-  margin: 0 auto;
-}
+
+
 
 div.zhushou-tour {
   background-color: transparent;
