--- a/src/common/css/common.scss
+++ b/src/common/css/common.scss
@@ -18,7 +18,7 @@ a{text-decoration:none;font-weight:normal;font-family:inherit}
 .wrap p{margin-top:30px;font-size:20px;opacity:0.5;word-break:break-all;line-height:150%}
 .wrap pre{margin-top:30px;overflow-x:auto;border:1px solid #E5E5E5;padding:20px;border-radius:2px}
 // #root {height: 100% !important}
-#root, #root > div, #root > section {height: 100%}
+// #root, #root > div, #root > section {height: 100%}
 
 
 ::-webkit-scrollbar {
