--- a/src/common/css/index.scss
+++ b/src/common/css/index.scss
@@ -4,7 +4,7 @@ body {
 }
 html,
 body {
-  height: 100%;
+  // height: 100%;
   background-color: #f4f4f4;
 }
 
@@ -19,8 +19,33 @@ body {
 // h5 引导
 .h5_guide_body {
   width: 100%;
+  height: auto;
   margin: 0 auto !important;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
+  padding-bottom: 60px;
+  .buttons {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 50px;
+    z-index: 999;
+    background: #f7f6f7;
+    border-top: 1px solid #e5e7ea;
+    white-space: nowrap;
+    overflow: hidden;
+    .button {
+      cursor: pointer;
+      display: inline-block;
+      width: 33.3%;
+      height: 100%;
+      text-align: center;
+      line-height: 50px;
+      cursor: pointer;
+      font-size: 15px;
+    }
+  }
 }
 
 .h5_page {
