--- a/src/common/css/index.scss
+++ b/src/common/css/index.scss
@@ -28,17 +28,19 @@ body {
     position: fixed;
     bottom: 0;
     left: 0;
+    display: flex;
     width: 100%;
     height: 50px;
-    z-index: 999;
+    z-index: 9999999;
     background: #f7f6f7;
     border-top: 1px solid #e5e7ea;
     white-space: nowrap;
     overflow: hidden;
     .button {
+      flex: 1;
       cursor: pointer;
       display: inline-block;
-      width: 33.3%;
+      // width: 33.3%;
       height: 100%;
       text-align: center;
       line-height: 50px;
