--- a/src/component/H5GuideMain2/index.scss
+++ b/src/component/H5GuideMain2/index.scss
@@ -29,3 +29,19 @@
     top: 30px;
   }
 }
+
+.tour_img_2loading{
+  .loading{
+    width: 100%;
+    height: 100px;
+    background: url(./img/loading.gif) no-repeat center center;
+    background-size: 50px 50px;
+    // position: absolute;
+    // top: 50%;
+    // left: 50%;
+    // transform: translate(-50%,-50%);
+    // width: 100%;
+    // max-width: 100%;
+    // max-height: 100%;
+  }
+}
