--- a/src/page/Home/Home_h5/index.scss
+++ b/src/page/Home/Home_h5/index.scss
@@ -1,4 +1,13 @@
-
+.home_h5{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  background: url('../../../component/H5GuideMain1/img/00.jpeg') no-repeat;
+  background-size: cover;
+}
  #change-sence-modal {
   position: fixed;
   top: 0;
@@ -11,7 +20,7 @@
 }
 .sence-modal-content {
   width: calc(100% - 80px);
-  height: 420px;
+  height: 320px;
   border-radius: 4px;
   background: #f2f3f4;
   margin: auto;
@@ -54,7 +63,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 0 10% 24px;
+  margin: 24px 10% 24px;
   background: white;
 }
 #mobile-header-mask {
