修改流程3图片

--- a/src/page/Home/Home_h5/index.scss
+++ b/src/page/Home/Home_h5/index.scss
@@ -5,7 +5,7 @@
   width: 100%;
   height: 100%;
   z-index: 9999;
-  background: url('../../../component/H5GuideMain1/img/00.jpeg') no-repeat;
+  background: url('./img/home_bj.jpeg') no-repeat;
   background-size: cover;
 }
  #change-sence-modal {
