--- a/src/component/H5GuideMain2/index.scss
+++ b/src/component/H5GuideMain2/index.scss
@@ -4,9 +4,9 @@
 
 #gaizhang{
   position: fixed;
-  top: 50%;
+  top: 60%;
   right: 0;
-  z-index: 2;
+  z-index: 999999;
   width: 200px;
   height: 80px;
   border-radius: 40px 0 0 40px;
@@ -16,7 +16,8 @@
     position: absolute;
     left: 0;
     top: 0;
-    width: 80px;
+    width: 65px;
+    margin-left: 15px;
   }
   .all_number{
     position: absolute;
@@ -28,6 +29,52 @@
     left: 100px;
     top: 30px;
   }
+}
+#zhang_popover{
+  position: fixed;
+  top: 60%;
+  right: 0;
+  z-index: 999999;
+  width: 3.3rem;
+  height: 80px;
+}
+
+.step5_number{
+  position: absolute;
+  font-size: 14px;
+  text-align: center;
+  left: 3.3rem;
+  top: 5.76rem;
+  width: 1rem;
+  z-index: 999999;
+  font-weight: 600;
+
+}
+.step4_number{
+  position: absolute;
+    font-size: 14px;
+    text-align: center;
+    left: 2.04rem;
+    top: 3.5rem;
+    width: 1rem;
+    z-index: 999999;
+}
+.dialog_last_number{
+  font-size: 18px;
+  text-align: center;
+  left: 2.04rem;
+  top: 5.1rem;
+  width: 1rem;
+  z-index: 999999;
+
+}
+.dialog_all_number{
+  font-size: 18px;
+  right: 1.94rem;
+  top: 5.1rem;
+  width: 1rem;
+  z-index: 999999;
+  text-align: center;
 }
 
 .tour_img_2loading{
