--- a/src/component/H5GuideMain2/index.scss
+++ b/src/component/H5GuideMain2/index.scss
@@ -10,7 +10,7 @@
   width: 200px;
   height: 80px;
   border-radius: 40px 0 0 40px;
-  background-color: rgb(146, 145, 221);
+  background-color: #fff;
   color: #fff;
   .gaizhang_img {
     position: absolute;
