--- a/src/page/Home/Home_h5/index.scss
+++ b/src/page/Home/Home_h5/index.scss
@@ -20,7 +20,8 @@
 }
 .sence-modal-content {
   width: calc(100% - 80px);
-  height: 340px;
+  // height: 340px;
+  height: 280px;
   border-radius: 4px;
   background: #f2f3f4;
   margin: auto;
