--- a/src/common/css/common.scss
+++ b/src/common/css/common.scss
@@ -24,19 +24,21 @@ body{
 }
 
 ::-webkit-scrollbar {
-  width: 12px;
+  width: 0px !important;
   height:12px;
+  display: none;
 }
 
+
 ::-webkit-scrollbar-track {
-  background-color: #F7F7F8;
+  background-color: transparent;
   //-webkit-box-shadow:  0px 0px 0px 2px rgba(217,217,217,1);
   //border-radius: 1px;
 }
 
 ::-webkit-scrollbar-thumb {
   background-color: #E0EBF8;
-  border: 3px solid #F7F7F8;
+  border: 0px solid #F7F7F8;
   border-radius: 6px;
   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 }
