--- a/src/component/H5GuideMain2/index.scss
+++ b/src/component/H5GuideMain2/index.scss
@@ -4,20 +4,19 @@
 
 #gaizhang{
   position: fixed;
-  top: 60%;
+  top: 0.9rem;
   right: 0;
   z-index: 999999;
-  width: 4rem;
-  height: 1.5rem;
+  width: 3.8rem;
+  height: 1.43rem;
   border-radius: 0.75rem 0 0 0.75rem;
   background-color: #fff;
   color: #fff;
   .gaizhang_img {
     position: absolute;
-    left: 0;
-    top: 0;
-    width: 1.2rem;
-    margin-left: 0.25rem;
+    right: 2.59rem;
+    top: 0.04rem;
+    width: 1rem;
     &:active{
       display: inline-block;
       vertical-align: middle;
@@ -30,15 +29,8 @@
       transition-property: transform;
       -webkit-transition-timing-function: ease-out;
       transition-timing-function: ease-out;
-
-    // margin: 0.4em;
-    // padding: 1em;
-    // cursor: pointer;
-    // background: #e1e1e1;
-    // text-decoration: none;
-    color: #666;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-    -webkit-font-smoothing: antialiased;
+      -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+      -webkit-font-smoothing: antialiased;
     }
   }
   // .all_number{
@@ -54,8 +46,8 @@
 }
 #zhang_popover{
   position: fixed;
-  top: 60%;
-  right: -0.19rem;
+  top: 1rem;
+  right: -0.09rem;
   z-index: 999999;
   width: 4rem;
   height: 1.4rem;
