--- a/src/common/css/index.scss
+++ b/src/common/css/index.scss
@@ -229,10 +229,14 @@ div.zhushou-tour {
     position: absolute;
     bottom: 0px;
     left: 0px;
-    width: 80px;
-    height: 80px;
-    padding: 20px;
+    width: 1.5384rem;
+    height: 1.5384rem;
+    padding: 0.38461538461538464rem;
     transform: translate(0, 0px);
+    .round-point {
+      width: 0.7692307692307693rem ;
+      height: 0.7692307692307693rem ;
+    }
   }
 }
 
