--- a/src/component/H5GuideMain2/index.scss
+++ b/src/component/H5GuideMain2/index.scss
@@ -4,35 +4,22 @@
 
 #gaizhang{
   position: fixed;
-  top: 0.9rem;
+  top: 5%;
   right: 0;
   z-index: 999999;
-  width: 3.8rem;
-  height: 1.43rem;
-  border-radius: 0.75rem 0 0 0.75rem;
+  width: 4rem;
+  height: 1.5rem;
+  border-radius: .85rem 0 0 .85rem;
   background-color: #fff;
   color: #fff;
+  opacity: 0.8;
+  box-shadow: 0 2px 2px 0 #ccc;
   .gaizhang_img {
     position: absolute;
     right: 2.59rem;
     top: 0.04rem;
-    width: 1rem;
-    &:active{
-      display: inline-block;
-      vertical-align: middle;
-      -webkit-transform: perspective(1px) translateZ(0);
-      transform: perspective(1px) translateZ(0);
-      box-shadow: 0 0 1px rgb(0 0 0 / 0%);
-      -webkit-transition-duration: 0.3s;
-      transition-duration: 0.3s;
-      -webkit-transition-property: transform;
-      transition-property: transform;
-      -webkit-transition-timing-function: ease-out;
-      transition-timing-function: ease-out;
-      -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-      -webkit-font-smoothing: antialiased;
-    }
-  }
+    width: 1rem;}
+  
   // .all_number{
   //   position: absolute;
   //   left: 100px;
@@ -46,34 +33,65 @@
 }
 #zhang_popover{
   position: fixed;
-  top: 1rem;
-  right: -0.09rem;
+  top: 6%;
+  right: -.19rem;
   z-index: 999999;
   width: 4rem;
   height: 1.4rem;
+ 
+  // .round-point{
+  //   position: absolute;
+  //   left: 0;
+  //   top:0;
+  // }
+  // .pointer-img {
+  //   background: url(./img/zhang.png) no-repeat;
+  //   background-size: 1.3rem 1.5008rem;;
+  //   display: inline-block;
+  //   position: absolute;
+  //   left: 0;;
+  //   top: 0rem;
+  //   width: 1.3rem;
+  //   height: 1.5008rem;
+  // }
+  // &:active .pointer-img{
+  //   vertical-align: middle;
+  //   -webkit-transform: perspective(1px) translateZ(0);
+  //   transform: perspective(1px) translateZ(0);
+  //   box-shadow: 0 0 1px rgb(0 0 0 / 0%);
+  //   -webkit-transition-duration: 0.3s;
+  //   transition-duration: 0.3s;
+  //   -webkit-transition-property: transform;
+  //   transition-property: transform;
+  //   -webkit-transition-timing-function: ease-out;
+  //   transition-timing-function: ease-out;
+  //   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  //   -webkit-font-smoothing: antialiased;
+  // }
 }
 
 // 显示
 .step5_number{
-  position: absolute;
-  font-size: 14px;
-  text-align: center;
   left: 3.3rem;
-  top: 5.42rem;
+  top: 5.46rem;
+  font-weight: 600;
+}
+
+.step4_number {
+  left: 1.74rem;
+  top: 3.43rem;
+}
+
+.step4_number, .step5_number {
+  position: absolute;
+  font-size: 12px;
+  text-align: center;
   width: 1rem;
   z-index: 999999;
-  font-weight: 600;
+  transform: scale(0.625);
+  color: #bbb;
+}
 
-}
-.step4_number{
-  position: absolute;
-    font-size: 14px;
-    text-align: center;
-    left: 2.04rem;
-    top: 3.5rem;
-    width: 1rem;
-    z-index: 999999;
-}
 .dialog_last_number{
   font-size: 18px;
   text-align: center;
